--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -7,127 +7,117 @@
   <meta name="description" content="AutoElite - Faça login ou crie sua conta." />
   <title>Login | AutoElite</title>
 
-  <!-- Estilos personalizados -->
   <link rel="stylesheet" href="/styles.css" />
   <link rel="stylesheet" href="/autenticacao.css" />
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
+
   <main>
     <div class="auth-container">
       <div class="auth-box">
 
-        <!-- Abas -->
         <div class="tabs">
           <button class="tab-btn active" data-tab="login">Login</button>
           <button class="tab-btn" data-tab="register">Criar Conta</button>
         </div>
 
-        <!-- Formulário de Login -->
         <div class="form-container active" id="login-form">
           <h2>Acessar minha conta</h2>
-          <form id="form-login">
+          <form id="form-login" novalidate>
             <div class="form-group">
               <label for="login-email">E-mail</label>
-              <input type="email" id="login-email" name="email" placeholder="Seu e-mail" required />
-              <span id="erroLoginEmail" class="erro"></span>
+              <input type="email" id="login-email" name="email" placeholder="seu@email.com" required />
             </div>
-
-            <div class="form-group password-container">
+            <div class="form-group">
               <label for="login-password">Senha</label>
-              <input type="password" id="login-password" name="senha" placeholder="Sua senha" required />
-              <span class="password-toggle" id="toggle-login-password">
-                <i class="fas fa-eye"></i>
-              </span>
-              <span id="erroLoginSenha" class="erro"></span>
+              <div class="password-container">
+                <input type="password" id="login-password" name="senha" placeholder="Sua senha" required />
+                <button type="button" class="password-toggle" data-target="login-password" aria-label="Mostrar/Ocultar senha">
+                  <i class="fas fa-eye"></i>
+                </button>
+              </div>
             </div>
-
             <div class="form-options">
-              <label class="remember-me">
-                <input type="checkbox" id="remember" />
-                <span>Lembrar-me</span>
-              </label>
+              <div class="checkbox-group">
+                <input type="checkbox" id="remember" name="remember" />
+                <label for="remember">Lembrar-me</label>
+              </div>
               <a href="#" class="forgot-password" id="forgot-password-link">Esqueci minha senha</a>
             </div>
-
             <button type="submit" class="btn-submit">Entrar</button>
-            <button type="button" class="btn-home" onclick="window.location.href='index.html'">Início</button>
+            <a href="index.html" class="btn-secondary">Voltar ao Início</a>
           </form>
         </div>
+
         <div class="form-container" id="register-form">
           <h2>Criar nova conta</h2>
-          <form id="form-registro">
-            <div class="form-group">
-              <label for="register-name">Nome completo</label>
-              <input type="text" id="register-name" name="nome" placeholder="Seu nome completo" required />
-              <small class="form-text text-muted validation-message">Digite seu nome completo (mínimo 8 caracteres).</small>
-            </div>
+          <form id="form-registro" novalidate>
+
+            <fieldset>
+              <legend>Dados Pessoais</legend>
+              <div class="form-group">
+                <label for="register-name">Nome completo</label>
+                <input type="text" id="register-name" name="nome" placeholder="Seu nome e sobrenome" required aria-describedby="register-name-msg" /> <small id="register-name-msg" class="form-text">Digite seu nome completo.</small> </div>
+              <div class="form-group">
+                <label for="register-phone">Telefone</label>
+                <input type="tel" id="register-phone" name="telefone" placeholder="(XX) XXXXX-XXXX" required aria-describedby="register-phone-msg" /> <small id="register-phone-msg" class="form-text">Ex: (11) 98765-4321</small> </div>
+              <div class="form-group">
+                <label for="cpf">CPF</label>
+                <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" required aria-describedby="cpf-msg" /> <small id="cpf-msg" class="form-text">Digite um CPF válido.</small> </div>
+            </fieldset>
+
+            <fieldset>
+              <legend>Dados da Conta</legend>
+              <div class="form-group">
+                <label for="register-email">E-mail</label>
+                <input type="email" id="register-email" name="email" placeholder="seu.melhor@email.com" required aria-describedby="register-email-msg" /> <small id="register-email-msg" class="form-text">Será usado para login e notificações.</small> </div>
+              <div class="form-group">
+                <label for="register-password">Crie uma senha</label>
+                <div class="password-container">
+                  <input type="password" id="register-password" name="senha" required aria-describedby="register-password-msg" /> <button type="button" class="password-toggle" data-target="register-password" aria-label="Mostrar/Ocultar senha">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                </div>
+                <small id="register-password-msg" class="form-text">Mínimo 8 caracteres, com números e símbolos.</small> </div>
+              <div class="form-group">
+                <label for="register-confirm-password">Confirmar Senha</label>
+                <div class="password-container">
+                  <input type="password" id="register-confirm-password" name="confirmarSenha" required aria-describedby="register-confirm-password-msg" /> <button type="button" class="password-toggle" data-target="register-confirm-password" aria-label="Mostrar/Ocultar senha">
+                    <i class="fas fa-eye"></i>
+                  </button>
+                </div>
+                <small id="register-confirm-password-msg" class="form-text">As senhas devem ser idênticas.</small> </div>
+            </fieldset>
 
             <div class="form-group">
-              <label for="register-email">E-mail</label>
-              <input type="email" id="register-email" name="email" placeholder="Seu e-mail" required />
-              <small class="form-text text-muted validation-message">Insira um e-mail do Gmail no formato correto.</small>
-            </div>
+              <label for="register-photo">Foto de Perfil (opcional)</label>
+              <input type="file" id="register-photo" name="foto" accept="image/*" /> </div>
 
             <div class="form-group">
-              <label for="register-phone">Telefone</label>
-              <input type="tel" id="register-phone" name="telefone" placeholder="(00) 00000-0000" required inputmode="numeric" pattern="[0-9\s()-]+" />
-              <small class="form-text text-muted validation-message">Formato: (XX) 9XXXXXXXX.</small>
-            </div>
-
-            <div class="form-group">
-              <label for="cpf">CPF</label>
-              <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="000.000.000-00" required inputmode="numeric" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" />
-              <small class="form-text text-muted validation-message">Digite um CPF válido.</small>
-            </div>
-
-            <div class="form-group password-container">
-              <label for="register-password">Senha</label>
-              <input type="password" id="register-password" name="senha" placeholder="Crie uma senha" required />
-              <small class="form-text text-muted validation-message">Mínimo de 6 caracteres contendo um número e um caractere especial.</small>
-              <span id="erroSenha" class="erro"></span>
-            </div>
-
-            <div class="form-group password-container">
-              <label for="register-confirm-password">Confirmar Senha</label>
-              <input type="password" id="register-confirm-password" name="confirmarSenha" placeholder="Confirme sua senha" required />
-              <small class="form-text text-muted validation-message">As senhas devem corresponder.</small>
-              <span id="erroConfirmarSenha" class="erro"></span>
-            </div>
-
-            <div class="form-group">
-              <label for="register-photo">Foto de Perfil</label>
-              <input type="file" id="register-photo" name="foto" accept="image/*" required />
-            </div>
-
-            <div class="form-options">
-              <label class="terms-checkbox">
-                <input type="checkbox" id="terms" required />
-                <span>Concordo com os <a href="#">Termos de Uso</a> e <a href="#">Política de Privacidade</a></span>
-              </label>
+              <div class="checkbox-group">
+                <input type="checkbox" id="terms" name="terms" required />
+                <label for="terms">Eu li e concordo com os <a href="#" target="_blank">Termos de Uso</a> e a <a href="#" target="_blank">Política de Privacidade</a>.</label>
+              </div>
             </div>
 
             <button type="submit" class="btn-submit">Criar Conta</button>
           </form>
         </div>
-        <!-- Formulário de Recuperação -->
+        
         <div class="form-container" id="forgot-password-form">
           <h2>Recuperar Senha</h2>
           <p class="form-description">
-            Digite seu e-mail para receber um link de recuperação.
+            Digite seu e-mail de cadastro para receber um link de recuperação.
           </p>
-          <form id="form-recuperacao">
+          <form id="form-recuperacao" novalidate>
             <div class="form-group">
               <label for="recovery-email">E-mail</label>
-              <input type="email" id="recovery-email" name="email" placeholder="Seu e-mail" required />
+              <input type="email" id="recovery-email" name="email" placeholder="seu@email.com" required />
             </div>
             <button type="submit" class="btn-submit">Enviar Link</button>
             <button type="button" class="btn-secondary" id="back-to-login">Voltar para o Login</button>
@@ -138,45 +128,14 @@
     </div>
   </main>
 
-  <!-- Rodapé -->
   <footer>
     <div class="container">
-      <div class="footer-grid">
-        <div class="footer-about">
-          <h3>Auto<span>Elite</span></h3>
-          <p>Há mais de 15 anos oferecendo os melhores veículos e serviços para nossos clientes.</p>
-          <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </div>
-        <div class="footer-links">
-          <h4>Links Rápidos</h4>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="autenticacao.html">Login</a></li>
-          </ul>
-        </div>
-        <div class="footer-contact">
-          <h4>Contato</h4>
-          <ul>
-            <li><i class="fas fa-map-marker-alt"></i> Av. Principal, 123 - Cidade, Estado</li>
-            <li><i class="fas fa-phone"></i> (11) 99999-9999</li>
-            <li><i class="fas fa-envelope"></i> contato@autoelite.com</li>
-          </ul>
-        </div>
-      </div>
       <div class="footer-bottom">
         <p>&copy; 2024 AutoElite. Todos os direitos reservados.</p>
       </div>
     </div>
   </footer>
 
-  <!-- Scripts -->
   <script src="/routes/autenticacao.js" defer></script>
 </body>
 
