--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css"> 
     <link rel="stylesheet" href="tickets.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="routes/sessao.js"></script>
+    <script src="guard-adm.js"></script>
 </head>
 <body>
     <header>
@@ -52,6 +54,5 @@
         </footer>
 
     <script src="tickets.js"></script>
-    <script src="routes/sessao.js"></script>
 </body>
 </html>
