--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -25,7 +25,7 @@
                     <li><a href="proposta.html">Faça sua Proposta</a></li>
                     <li id="CrudUsuario"><a href="CRUDusuario.html">CRUDusuario</a></li>
                     <li id="CrudVeiculos"><a href="CRUDveiculos.html">CRUDveiculos</a></li>
-                    <li id="tickets"><a href="tickets.html">tickets</a></li>
+                    <li id="tickets"><a href="tickets.html">Tickets</a></li>
                 </ul>
             </nav>
             <div class="login-button" id="user-info">
