--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -202,7 +202,7 @@
     </div>
   </footer>
 
-  <script src="/routes/manuntencao.js" defer></script>
+  <!-- <script src="/routes/manuntencao.js" defer></script> -->
 </body>
 
 </html>
