--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -101,7 +101,7 @@
       
       // Remove o redirecionamento automático para manter o usuário na página e ver a mensagem
       // Se quiser redirecionar após um tempo, descomente a linha abaixo:
-      // setTimeout(() => window.location.href = "index.html", 2000);
+      setTimeout(() => window.location.href = "index.html", 1500);
     });
   </script>
 </body>
